--- a/src/main/webapp/opd_bill.xhtml
+++ b/src/main/webapp/opd_bill.xhtml
@@ -401,7 +401,7 @@
                                                     </p:autoComplete>
                                                     <h:panelGroup >
                                                         <p:watermark for="creditCom" value="Type at least 3 charactors of Collecting Centre." ></p:watermark>
-                                                        <p:commandLink id="btnAddNewCc" value="Add" ajax="false" action="/lab/collecting_centre"
+                                                        <p:commandLink id="btnAddNewCc" value="Add" ajax="false" action="#{navigationController.navigateToCollectingCenter()}"
                                                                        actionListener="#{collectingCentreController.prepareAdd()}"  />  
 
                                                     </h:panelGroup>
@@ -418,7 +418,7 @@
                                                     </p:autoComplete> 
                                                     <h:panelGroup >
                                                         <p:watermark for="creditCompany" value="Type at least 3 charactors of Credit Company." ></p:watermark>
-                                                        <p:commandLink id="btnAddNewCreditCom" value="Add" ajax="false" action="/lab/credit_company"
+                                                        <p:commandLink id="btnAddNewCreditCom" value="Add" ajax="false" action="#{navigationController.navigateToCreditCompany()}"
                                                                        actionListener="#{creditCompanyController.prepareAdd()}" />  
 
                                                     </h:panelGroup>
