--- a/src/main/webapp/admin/discount/membership_scheme_discount_channelling_by_department.xhtml
+++ b/src/main/webapp/admin/discount/membership_scheme_discount_channelling_by_department.xhtml
@@ -9,19 +9,31 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="admin_discounts.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
-                    <p:panel header="Channel Discount Matrix" id="reportPrint">
+                    <p:panel header="Membership Discount Management for Channelling" id="reportPrint">
 
-                        <p:panel header="Add new Matrix" >
-                            <h:panelGrid columns="2" >
-                                <h:outputLabel value="Discount Scheme"/>
+                        <p:panel header="Add New Discount" >
+                            <p:panelGrid columns="2" >
+                                <h:outputLabel value="Membership Scheme"/>
                                 <p:autoComplete forceSelection="true" 
-                                                value="#{opdMemberShipDiscountController.paymentScheme}" 
-                                                completeMethod="#{paymentSchemeController.completePaymentSchemeChannel}" 
-                                                var="mem" itemLabel="#{mem.name}" itemValue="#{mem}" styleClass="mediuminput" >
+                                                value="#{opdMemberShipDiscountController.membershipScheme}" 
+                                                completeMethod="#{membershipSchemeController.completeMembershipScheme}" 
+                                                var="mem" itemLabel="#{mem.name}" itemValue="#{mem}" >
+                                </p:autoComplete>
+                                <h:outputLabel value="Department :" />
+                                <p:autoComplete value="#{opdMemberShipDiscountController.department}" 
+                                                forceSelection="true"
+                                                completeMethod="#{departmentController.completeDept}" 
+                                                var="dep" itemLabel="#{dep.name}" itemValue="#{dep}" >
+                                    <p:column>
+                                        <h:outputLabel value="#{dep.name}"/>
+                                    </p:column>
+                                    <p:column>
+                                        <h:outputLabel value="#{dep.institution.name}"/>
+                                    </p:column>
                                 </p:autoComplete>
                                 <h:outputLabel value="Payment Method"/>
                                 <p:selectOneMenu   value="#{opdMemberShipDiscountController.paymentMethod}"  >
@@ -32,16 +44,15 @@
                                 <p:inputText autocomplete="off" value="#{opdMemberShipDiscountController.margin}" />
                                 <h:outputLabel value="" />
                                 <p:commandButton id="btnAdd" value="Add" ajax="false" 
-                                                 action="#{opdMemberShipDiscountController.saveSelectedChannelPaymentScheme}" />
+                                                 action="#{opdMemberShipDiscountController.saveChannellingDiscountMatrixForDepartment()}" />
 
                                 <p:defaultCommand target="btnAdd"/>
-                            </h:panelGrid>
-                            
-                            <p:commandButton ajax="false" value="Fill" 
-                                             action="#{opdMemberShipDiscountController.createItemsChannelPaymentScheme()}" />
-                            <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton">
+                            </p:panelGrid>
+                            <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
                                 <p:dataExporter type="xlsx" target="inwd" fileName="Price_metrix_investigation"  />
                             </p:commandButton>
+                            <p:commandButton ajax="false" value="Fill" 
+                                            action="#{opdMemberShipDiscountController.createItemsDepartments}" />
                             <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >                                         
                                 <p:printer target="reportPrint"/>
                             </p:commandButton>
@@ -53,13 +64,29 @@
                             <p:dataTable id="inwd" value="#{opdMemberShipDiscountController.items}"
                                          filteredValue="#{opdMemberShipDiscountController.filterItems}"
                                          var="a" editable="true" scrollable="true" scrollHeight="500">
-                                <p:column headerText="Discount Scheme">
+                                <p:column headerText="Member Ship Scheme">
                                     <p:autoComplete forceSelection="true" 
-                                                    value="#{a.paymentScheme}" 
-                                                    completeMethod="#{paymentSchemeController.completePaymentScheme}" 
+                                                    value="#{a.membershipScheme}" 
+                                                    completeMethod="#{membershipSchemeController.completeMembershipScheme}" 
                                                     var="mem" itemLabel="#{mem.name}" itemValue="#{mem}" >
                                     </p:autoComplete>
                                 </p:column>
+
+                                <p:column headerText="Department Name" 
+                                          filterBy="#{a.department.name}" filterMatchMode="contains">
+                                    <p:autoComplete forceSelection="true" value="#{a.department}" 
+                                                    completeMethod="#{departmentController.completeDept}" 
+                                                    var="dep" itemLabel="#{dep.name}" itemValue="#{dep}" >
+                                        <p:column>
+                                            <h:outputLabel value="#{dep.name}"/>
+                                        </p:column>
+                                        <p:column>
+                                            <h:outputLabel value="#{dep.institution.name}"/>
+                                        </p:column>
+                                    </p:autoComplete>
+
+                                </p:column>
+
                                 <p:column headerText="Payment Method">
                                     <p:selectOneMenu  value="#{a.paymentMethod}"  >
                                         <f:selectItem itemLabel="Select" />                           
@@ -73,10 +100,10 @@
                                 </p:column>
                                 <p:column>
                                     <p:commandButton ajax="false" value="Update" 
-                                                     action="#{opdMemberShipDiscountController.onEdit(a)}"/> 
+                                                    action="#{opdMemberShipDiscountController.onEdit(a)}"/> 
                                 </p:column>
                                 <p:column>
-                                    <p:commandButton ajax="false" value="Delete" action="#{opdMemberShipDiscountController.deleteDepartmentPaymentScheme()}">
+                                    <p:commandButton ajax="false" value="Delete" action="#{opdMemberShipDiscountController.deleteDepartment}">
                                         <f:setPropertyActionListener value="#{a}" target="#{opdMemberShipDiscountController.current}"/>
                                     </p:commandButton>
                                 </p:column>
