--- a/src/main/webapp/admin/discount/payment_scheme_discount_channel.xhtml
+++ b/src/main/webapp/admin/discount/payment_scheme_discount_channel.xhtml
@@ -9,25 +9,19 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="admin_discounts.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
-                    <p:panel header="OPD Payment Discount Matrix" id="reportPrint">
+                    <p:panel header="Channel Discount Matrix" id="reportPrint">
 
                         <p:panel header="Add new Matrix" >
-                            <p:panelGrid columns="2" >                               
-                                <h:outputLabel value="Department :" />
-                                <p:autoComplete value="#{opdMemberShipDiscountController.department}" 
-                                                forceSelection="true"
-                                                completeMethod="#{departmentController.completeDept}" 
-                                                var="dep" itemLabel="#{dep.name}" itemValue="#{dep}" >
-                                    <p:column>
-                                        <h:outputLabel value="#{dep.name}"/>
-                                    </p:column>
-                                    <p:column>
-                                        <h:outputLabel value="#{dep.institution.name}"/>
-                                    </p:column>
+                            <h:panelGrid columns="2" >
+                                <h:outputLabel value="Discount Scheme"/>
+                                <p:autoComplete forceSelection="true" 
+                                                value="#{opdMemberShipDiscountController.paymentScheme}" 
+                                                completeMethod="#{paymentSchemeController.completePaymentSchemeChannel}" 
+                                                var="mem" itemLabel="#{mem.name}" itemValue="#{mem}" styleClass="mediuminput" >
                                 </p:autoComplete>
                                 <h:outputLabel value="Payment Method"/>
                                 <p:selectOneMenu   value="#{opdMemberShipDiscountController.paymentMethod}"  >
@@ -38,20 +32,20 @@
                                 <p:inputText autocomplete="off" value="#{opdMemberShipDiscountController.margin}" />
                                 <h:outputLabel value="" />
                                 <p:commandButton id="btnAdd" value="Add" ajax="false" 
-                                                action="#{opdMemberShipDiscountController.saveSelectedDepartmentPaymentMethod}" />
+                                                 action="#{opdMemberShipDiscountController.saveSelectedChannelPaymentScheme}" />
 
                                 <p:defaultCommand target="btnAdd"/>
-                            </p:panelGrid>
-                            <p:panelGrid columns="3" >   
-                            <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
+                            </h:panelGrid>
+                            
+                            <p:commandButton ajax="false" value="Fill" 
+                                             action="#{opdMemberShipDiscountController.createItemsChannelPaymentScheme()}" />
+                            <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton">
                                 <p:dataExporter type="xlsx" target="inwd" fileName="Price_metrix_investigation"  />
                             </p:commandButton>
-                            <p:commandButton ajax="false" value="Fill" 
-                                            action="#{opdMemberShipDiscountController.createItemsDepartmentsPaymentMethod}" />
                             <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >                                         
                                 <p:printer target="reportPrint"/>
                             </p:commandButton>
-  </p:panelGrid>
+
                         </p:panel>
 
                         <p:panel header="Price Matrix" >
@@ -59,48 +53,29 @@
                             <p:dataTable id="inwd" value="#{opdMemberShipDiscountController.items}"
                                          filteredValue="#{opdMemberShipDiscountController.filterItems}"
                                          var="a" editable="true" scrollable="true" scrollHeight="500">
-                              
-                                <p:column headerText="Department Name" 
-                                          filterBy="#{a.department.name}" filterMatchMode="contains">
-                                      <f:facet name="header">
-                                    <h:outputLabel value="Department Name"  />
-                                </f:facet>
-                                    <p:autoComplete forceSelection="true" value="#{a.department}" 
-                                                    completeMethod="#{departmentController.completeDept}" 
-                                                    var="dep" itemLabel="#{dep.name}" itemValue="#{dep}" >
-                                        <p:column>
-                                            <h:outputLabel value="#{dep.name}"/>
-                                        </p:column>
-                                        <p:column>
-                                            <h:outputLabel value="#{dep.institution.name}"/>
-                                        </p:column>
+                                <p:column headerText="Discount Scheme">
+                                    <p:autoComplete forceSelection="true" 
+                                                    value="#{a.paymentScheme}" 
+                                                    completeMethod="#{paymentSchemeController.completePaymentScheme}" 
+                                                    var="mem" itemLabel="#{mem.name}" itemValue="#{mem}" >
                                     </p:autoComplete>
-
                                 </p:column>
-
                                 <p:column headerText="Payment Method">
-                                      <f:facet name="header">
-                                    <h:outputLabel value="Payment Method"  />
-                                </f:facet>
-                                    <h:inputHidden value="#{a.paymentMethod}">   </h:inputHidden>
                                     <p:selectOneMenu  value="#{a.paymentMethod}"  >
                                         <f:selectItem itemLabel="Select" />                           
                                         <f:selectItems value="#{enumController.paymentMethods}" />                                    
                                     </p:selectOneMenu>
                                 </p:column>
                                 <p:column  headerText="Discount Percent">
-                                      <f:facet name="header">
-                                    <h:outputLabel value="Discount Percent"  />
-                                </f:facet>
                                     <h:inputText autocomplete="off" value="#{a.discountPercent}" >
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </h:inputText>
                                 </p:column>
-                                <p:column exportable="false">
+                                <p:column>
                                     <p:commandButton ajax="false" value="Update" 
-                                                    action="#{opdMemberShipDiscountController.onEdit(a)}"/> 
+                                                     action="#{opdMemberShipDiscountController.onEdit(a)}"/> 
                                 </p:column>
-                                <p:column exportable="false">
+                                <p:column>
                                     <p:commandButton ajax="false" value="Delete" action="#{opdMemberShipDiscountController.deleteDepartmentPaymentScheme()}">
                                         <f:setPropertyActionListener value="#{a}" target="#{opdMemberShipDiscountController.current}"/>
                                     </p:commandButton>
