--- a/src/main/webapp/admin/discount/payment_scheme_discount_opd_by_department.xhtml
+++ b/src/main/webapp/admin/discount/payment_scheme_discount_opd_by_department.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="admin_discounts.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="OPD Payment Discount Matrix" id="reportPrint">
 
@@ -23,16 +23,18 @@
                                                 completeMethod="#{paymentSchemeController.completePaymentScheme}" 
                                                 var="mem" itemLabel="#{mem.name}" itemValue="#{mem}" >
                                 </p:autoComplete>
-                                <h:outputLabel value="Item Name" />
-                                <p:autoComplete value="#{opdMemberShipDiscountController.item}" 
+                                <h:outputLabel value="Department :" />
+                                <p:autoComplete value="#{opdMemberShipDiscountController.department}" 
                                                 forceSelection="true"
-                                                completeMethod="#{itemController.completeItem}"
-                                                converter="itemcon"
-                                                var="cat" 
-                                                itemLabel="#{cat.name}" 
-                                                itemValue="#{cat}">                                   
+                                                completeMethod="#{departmentController.completeDept}" 
+                                                var="dep" itemLabel="#{dep.name}" itemValue="#{dep}" >
+                                    <p:column>
+                                        <h:outputLabel value="#{dep.name}"/>
+                                    </p:column>
+                                    <p:column>
+                                        <h:outputLabel value="#{dep.institution.name}"/>
+                                    </p:column>
                                 </p:autoComplete>
-
                                 <h:outputLabel value="Payment Method"/>
                                 <p:selectOneMenu   value="#{opdMemberShipDiscountController.paymentMethod}"  >
                                     <f:selectItem itemLabel="Select" />                           
@@ -40,18 +42,17 @@
                                 </p:selectOneMenu>
                                 <h:outputLabel value="Discount" ></h:outputLabel>
                                 <p:inputText autocomplete="off" value="#{opdMemberShipDiscountController.margin}" />
-                                <h:outputLabel value="" ></h:outputLabel>
-                                <p:commandButton id="btnAdd" value="Add" ajax="false"
-                                                action="#{opdMemberShipDiscountController.saveItemPaymentScheme()}" >
-                                </p:commandButton>
+                                <h:outputLabel value="" />
+                                <p:commandButton id="btnAdd" value="Add" ajax="false" 
+                                                action="#{opdMemberShipDiscountController.saveSelectedDepartmentPaymentScheme}" />
 
                                 <p:defaultCommand target="btnAdd"/>
                             </p:panelGrid>
                             <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
                                 <p:dataExporter type="xlsx" target="inwd" fileName="Price_metrix_investigation"  />
                             </p:commandButton>
-                            <p:commandButton ajax="false" value="Fill"
-                                            action="#{opdMemberShipDiscountController.createItemsPaymentScheme()}" />
+                            <p:commandButton ajax="false" value="Fill" 
+                                            action="#{opdMemberShipDiscountController.createItemsDepartmentsPaymentScheme}" />
                             <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >                                         
                                 <p:printer target="reportPrint"/>
                             </p:commandButton>
@@ -63,7 +64,6 @@
                             <p:dataTable id="inwd" value="#{opdMemberShipDiscountController.items}"
                                          filteredValue="#{opdMemberShipDiscountController.filterItems}"
                                          var="a" editable="true" scrollable="true" scrollHeight="500">
-
                                 <p:column headerText="Discount Scheme">
                                     <p:autoComplete forceSelection="true" 
                                                     value="#{a.paymentScheme}" 
@@ -72,16 +72,19 @@
                                     </p:autoComplete>
                                 </p:column>
 
-                                <p:column headerText="Category Name"
-                                          filterBy="#{a.category.name}" filterMatchMode="contains">
-                                    <p:autoComplete value="#{a.item}" 
-                                                    forceSelection="true"
-                                                    completeMethod="#{itemController.completeItem}"
-                                                    converter="itemcon"
-                                                    var="cat" 
-                                                    itemLabel="#{cat.name}" 
-                                                    itemValue="#{cat}">                                   
+                                <p:column headerText="Department Name" 
+                                          filterBy="#{a.department.name}" filterMatchMode="contains">
+                                    <p:autoComplete forceSelection="true" value="#{a.department}" 
+                                                    completeMethod="#{departmentController.completeDept}" 
+                                                    var="dep" itemLabel="#{dep.name}" itemValue="#{dep}" >
+                                        <p:column>
+                                            <h:outputLabel value="#{dep.name}"/>
+                                        </p:column>
+                                        <p:column>
+                                            <h:outputLabel value="#{dep.institution.name}"/>
+                                        </p:column>
                                     </p:autoComplete>
+
                                 </p:column>
 
                                 <p:column headerText="Payment Method">
@@ -90,17 +93,17 @@
                                         <f:selectItems value="#{enumController.paymentMethods}" />                                    
                                     </p:selectOneMenu>
                                 </p:column>
-
-                                <p:column  headerText="Discount">
+                                <p:column  headerText="Discount Percent">
                                     <h:inputText autocomplete="off" value="#{a.discountPercent}" >
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </h:inputText>
                                 </p:column>
                                 <p:column>
-                                    <p:commandButton ajax="false" value="Update" action="#{opdMemberShipDiscountController.onEdit(a)}"/> 
+                                    <p:commandButton ajax="false" value="Update" 
+                                                    action="#{opdMemberShipDiscountController.onEdit(a)}"/> 
                                 </p:column>
                                 <p:column>
-                                    <p:commandButton value="Delete" action="#{opdMemberShipDiscountController.deleteItemPaymentScheme}">
+                                    <p:commandButton ajax="false" value="Delete" action="#{opdMemberShipDiscountController.deleteDepartmentPaymentScheme()}">
                                         <f:setPropertyActionListener value="#{a}" target="#{opdMemberShipDiscountController.current}"/>
                                     </p:commandButton>
                                 </p:column>
