Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -10,8 +10,10 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content" >
 
+
+
                 <h:form >
-                    <p:panelGrid columns="2" >
+                    <p:panelGrid columns="2" rendered="false" >
                         <p:outputLabel value="Message" ></p:outputLabel>
                         <p:inputText value="#{smsController.message}" ></p:inputText>
                         <p:outputLabel value="Number" ></p:outputLabel>
@@ -19,7 +21,14 @@
                         <p:commandButton ajax="false" value="Sned SMS" action="#{smsController.sendSmsForPatientReport()}" >
                         </p:commandButton>
                     </p:panelGrid>
+
+
+
+                    <p:commandButton value="Button" ></p:commandButton>
+
                 </h:form>
+
+
 
             </ui:define>
         </ui:composition>
