--- a/src/main/webapp/channel/reports/index.xhtml
+++ b/src/main/webapp/channel/reports/index.xhtml
@@ -1,12 +1,17 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <h:body>
+
         <ui:composition template="/resources/template/template.xhtml">
+            <ui:define name="title">
+                Channelling Reports and Summaries
+            </ui:define>
+
             <ui:define name="content">
 
                 <div class="row" >
@@ -17,7 +22,7 @@
                                 <p:tab title="Manage" >
                                     <div class="d-grid gap-2">
 
-                                        <p:commandButton class="btn btn-primary"
+                                        <p:commandButton styleClass="linkButton"
                                                          action="#{institutionController.toAddNewInstitution()}" 
                                                          icon="bi bi-building-fill-add" value="Add New Institution">
 
@@ -82,11 +87,7 @@
                     </div>
                 </div>
 
-
-
-
             </ui:define>
-
 
         </ui:composition>
 
