--- a/src/main/webapp/admin/items/investigation.xhtml
+++ b/src/main/webapp/admin/items/investigation.xhtml
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="col-md-8" >
 
-                                    <p:panel id="detailPan" >
+                                    <p:panel id="detailPan" class="w-100">
                                         <f:facet name="header" >
                                             <h:outputLabel value="Details - " ></h:outputLabel>
                                             <h:outputLabel value="Active" rendered="#{!investigationController.current.inactive}" style="color: green;"></h:outputLabel>
@@ -121,71 +121,71 @@
 
                                         <p:tabView class="w-100" id="gpDetail" >
                                             <p:tab title="Basic Details">
-                                                <p:panelGrid id="gpDetailText" columns="2" style="white-space: nowrap;" class="w-100">
+                                                <p:panelGrid id="gpDetailText" columns="2" class="w-100">
                                                     <h:outputText id="lblName" value="Name" ></h:outputText>
-                                                    <p:inputText class="w-100"  autocomplete="off" id="txtName" 
+                                                    <p:inputText class="form-control"  autocomplete="off" id="txtName" 
                                                                  value="#{investigationController.current.name}"  ></p:inputText>
                                                     <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
-                                                    <p:inputText class="w-100"  autocomplete="off" id="txtAddress"  
+                                                    <p:inputText class="form-control"  autocomplete="off" id="txtAddress"  
                                                                  value="#{investigationController.current.printName}"  ></p:inputText>
                                                     <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
-                                                    <p:inputText class="w-100"  autocomplete="off" id="txtFullName"  
+                                                    <p:inputText class="form-control"  autocomplete="off" id="txtFullName"  
                                                                  value="#{investigationController.current.fullName}"  ></p:inputText>
                                                     <p:outputLabel value="Item Code"/>
-                                                    <p:inputText class="w-100" autocomplete="off" value="#{investigationController.current.code}"/>
+                                                    <p:inputText class="form-control" autocomplete="off" value="#{investigationController.current.code}"/>
 
                                                     <h:outputText value="Category" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbCat"   value="#{investigationController.current.investigationCategory}" >
+                                                    <p:selectOneMenu class="form-control" id="cmbCat"   value="#{investigationController.current.investigationCategory}" >
                                                         <f:selectItem itemLabel="Please select a category"/>
                                                         <f:selectItems value="#{investigationCategoryController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                                     </p:selectOneMenu>
                                                     <h:outputText value="Sample" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbSample"  value="#{investigationController.current.sample}" >
+                                                    <p:selectOneMenu class="form-control" id="cmbSample"  value="#{investigationController.current.sample}" >
                                                         <f:selectItem itemLabel="Please select a Sample"/>
                                                         <f:selectItems value="#{sampleController.items}" var="s" itemLabel="#{s.name}" itemValue="#{s}" />
                                                     </p:selectOneMenu>
                                                     <h:outputText value="Container" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbTube"  value="#{investigationController.current.investigationTube}" >
+                                                    <p:selectOneMenu class="form-control" id="cmbTube"  value="#{investigationController.current.investigationTube}" >
                                                         <f:selectItem itemLabel="Please select a Tube"/>
                                                         <f:selectItems value="#{investigationTubeController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                                     </p:selectOneMenu>
                                                     <h:outputText value="Analyzer" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbmac"   value="#{investigationController.current.machine}" >
+                                                    <p:selectOneMenu class="form-control" id="cmbmac"   value="#{investigationController.current.machine}" >
                                                         <f:selectItem itemLabel="Please select a Machine"/>
                                                         <f:selectItems value="#{machineController.items}" var="m" itemLabel="#{m.name}" itemValue="#{m}" />
                                                     </p:selectOneMenu>
                                                     <h:outputText value="Priority" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" value="#{investigationController.current.priority}"    >
+                                                    <p:selectOneMenu class="form-control" value="#{investigationController.current.priority}"    >
                                                         <f:selectItem itemLabel="Not Set" ></f:selectItem>
                                                         <f:selectItems value="#{enumController.priorities}" ></f:selectItems>
                                                     </p:selectOneMenu>
                                                     <p:outputLabel value="Report Category"/>
-                                                    <p:selectOneMenu class="w-100" value="#{investigationController.current.reportType}" >                               
+                                                    <p:selectOneMenu class="form-control" value="#{investigationController.current.reportType}" >                               
                                                         <f:selectItem itemLabel="General" itemValue="General"/>
                                                         <f:selectItem itemLabel="Microbiology" itemValue="Microbiology"/>
                                                         <f:selectItem itemLabel="Pathology / Haematology" itemValue="PathologyOrHaematology"/>
                                                     </p:selectOneMenu>
                                                     <h:outputText value="Report Format" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbRf"  value="#{investigationController.current.reportFormat}" >
+                                                    <p:selectOneMenu class="form-control" id="cmbRf"  value="#{investigationController.current.reportFormat}" >
                                                         <f:selectItems value="#{reportFormatController.items}" var="rf1" itemLabel="#{rf1.name}" itemValue="#{rf1}" />
                                                     </p:selectOneMenu>
 
 
                                                     <h:outputText value="Serial Numbers" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbSerial"  
+                                                    <p:selectOneMenu class="form-control" id="cmbSerial"  
                                                                      value="#{investigationController.current.sessionNumberType}" >
                                                         <f:selectItem itemLabel="Please select a Session Number Generation Strategy"/>
                                                         <f:selectItems value="#{enumController.sessionNumberTypes}" />
                                                     </p:selectOneMenu>
 
                                                     <h:outputText value="Worksheet" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbWs"  value="#{investigationController.current.worksheet }" >
+                                                    <p:selectOneMenu class="form-control" id="cmbWs"  value="#{investigationController.current.worksheet }" >
                                                         <f:selectItem itemLabel="By Values"/>
                                                         <f:selectItems value="#{reportFormatController.items}" var="rf" itemLabel="#{rf.name}" itemValue="#{rf}" />
                                                     </p:selectOneMenu>
 
                                                     <h:outputText value="Inward Category" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbInward" value="#{investigationController.current.inwardChargeType}" >
+                                                    <p:selectOneMenu class="form-control" id="cmbInward" value="#{investigationController.current.inwardChargeType}" >
                                                         <f:selectItem itemLabel="Please select Charge"/>
                                                         <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
                                                     </p:selectOneMenu>
@@ -200,7 +200,7 @@
                                                         <p:ajax event="change" process="@this" update="reportedAsIx" />
                                                     </p:selectBooleanCheckbox>
                                                     <h:panelGroup >
-                                                        <p:autoComplete class="w-100" converter="ixcon"
+                                                        <p:autoComplete class="form-control" converter="ixcon"
                                                                         disabled="#{!investigationController.reportedAs}"
                                                                         widgetVar="aIx2" id="reportedAsIx"
                                                                         forceSelection="true"
@@ -221,13 +221,13 @@
                                                     </h:panelGroup>
 
                                                     <h:outputText value="Institution" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbIns"    value="#{investigationController.current.institution}" >
+                                                    <p:selectOneMenu class="form-control" id="cmbIns"    value="#{investigationController.current.institution}" >
                                                         <f:selectItem itemLabel="Please select a Institution"/>
                                                         <f:selectItems value="#{institutionController.companies}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                                         <f:ajax execute="cmbIns" render="cmbDep" event="change"/>                                        
                                                     </p:selectOneMenu>
                                                     <h:outputText value="Department" ></h:outputText>
-                                                    <p:selectOneMenu class="w-100" id="cmbDep"  value="#{investigationController.current.department}" >
+                                                    <p:selectOneMenu class="form-control" id="cmbDep"  value="#{investigationController.current.department}" >
                                                         <f:selectItem itemLabel="Please select a Department"/>
                                                         <f:selectItems value="#{investigationController.institutionDepatrments}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                                     </p:selectOneMenu>
