Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reportIncome/report_income_with_credit_by_institution.xhtml
+++ b/src/main/webapp/reportIncome/report_income_with_credit_by_institution.xhtml
@@ -9,8 +9,8 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/reportIncome/report_income.xhtml">
+            <ui:define name="subcontent">
                 <h:outputStylesheet library="css" name="printing.css" />
                 <h:form>
                     <p:panel id="panelReport" styleClass="noBorder summeryBorder" >
