--- a/src/main/webapp/reportIncome/opd_professional_payment_due.xhtml
+++ b/src/main/webapp/reportIncome/opd_professional_payment_due.xhtml
@@ -8,8 +8,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/reportIncome/report_income.xhtml">
+            <ui:define name="subcontent">
                 <h:outputStylesheet library="css" name="printing.css" />
 
                 <h:form>
