--- a/src/main/webapp/reportIncome/report_income_with_credit_by_institution_for_build_bills.xhtml
+++ b/src/main/webapp/reportIncome/report_income_with_credit_by_institution_for_build_bills.xhtml
@@ -9,11 +9,11 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/reportIncome/report_income.xhtml">
 
 
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:outputStylesheet library="css" name="printing.css" />
 
 
